syntax = "proto3";

package api.v1;

import "buf/validate/validate.proto";

message DomainRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
}

message DomainsResponse {
  repeated Domain data = 1;
}

message Domain {
  string id = 1 [(buf.validate.field).string.uuid = true];
  string name = 2;
  string domain = 3 [(buf.validate.field).string.pattern = "^[a-zA-Z0-9.-]+(:[0-9]{1,5})?$"];
}

message CreateDomainRequest {
  string name = 2;
  string domain = 3 [(buf.validate.field).string.pattern = "^[a-zA-Z0-9.-]+(:[0-9]{1,5})?$"];
}
